# ROILoc

./: .gitignore  CITATION.cff  README.rst  devenv.nix  pyproject.toml  roiloc.py
roiloc/: _cache.py  location.py  locator.py  registration.py  roiloc.py  sanitychecks.py  template.py
tests/: test_roiloc.py  test_wihipp.py
