[tool.poetry]
name = "ROILoc"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.rst"
authors = ["Clément POIRET <poiret.clement@outlook.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
antspyx = "^0.2.7"
nibabel = "^3.2.1"
pandas = "^1.3.0"
rich = "^10.5.0"
importlib-resources = "^5.2.0"

[tool.poetry.scripts]
roiloc = 'roiloc.roiloc:start'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
