[project]
name = "roiloc"
version = "0.4.0"
description = "A simple package to center and crop T1w & T2w MRIs around a given region of interest by its name."
license = {text = "MIT License"}
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    {name = "Clément POIRET", email = "poiret.clement@outlook.fr"}
]
keywords = ["mri", "brain", "t1w", "t2w", "registration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing"
]
urls = {homepage = "https://hippomnesis.dev", repository = "https://github.com/clementpoiret/ROILoc"}
requires-python = ">=3.9"
dependencies = [
    "antspyx>=0.5.0",
    "pandas>=2.0.0",
    "rich>=11.0.0",
]

[dependency-groups]
dev = [
  "pytest"
]
lint = [
  "ruff"
]

[project.scripts]
roiloc = "roiloc.roiloc:start"

[tool.uv]
package = true
